# csgo-server

./: .gitignore  Cargo.toml  README.md  build.rs
csgo-server/: .eslintrc.cjs  .prettierignore  .prettierrc.cjs  base.css  index.html  package.json  vite.config.ts
csgo-server/src/: App.vue  main.ts  router.ts
csgo-server/src-tauri/: Cargo.toml  tauri.conf.json
csgo-server/src-tauri/src/: main.rs
csgo-server/src/components/: index.ts
csgo-server/src/components/atoms/: index.ts
csgo-server/src/components/atoms/loader/: loader.vue
csgo-server/src/pages/: index.ts
csgo-server/src/pages/home/: home.vue
lib/: Cargo.toml
lib/src/: lib.rs  run.rs  setup.rs
resources/cfgs/: competitive_rules.cfg  server.cfg
resources/config/: commands.txt  exec.txt
src/: main.rs
src/server/: ops.rs
src/utils/: config.rs  mod.rs  paths.rs
terminal-app/: Cargo.toml  build.rs
terminal-app/src/: main.rs
terminal-app/src/server/: ops.rs
